# blackrouter

./: .dockerignore  .env.example  .gitignore  BLACKROUTER_RUST_TELEGRAM_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  playwright.config.cjs
.commandcode/taste/: taste.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml
.zed/: settings.json
crates/blackrouter-api/: Cargo.toml
crates/blackrouter-api/src/: auth.rs  embeddings.rs  lib.rs  metrics.rs  oauth.rs  state.rs  telemetry.rs
crates/blackrouter-api/static/: aliases.js  apikeys.js  callback.html  core.js  limits.js  pages.js  settings.js  setup.css  setup.html  setup.js  versions.js
crates/blackrouter-bin/: Cargo.toml
crates/blackrouter-bin/src/: main.rs
crates/blackrouter-cli/: Cargo.toml
crates/blackrouter-cli/src/: antigravity.rs  main.rs
crates/blackrouter-common/: Cargo.toml
crates/blackrouter-common/src/: lib.rs
crates/blackrouter-config/: Cargo.toml
crates/blackrouter-config/src/: lib.rs
crates/blackrouter-core/: Cargo.toml
crates/blackrouter-core/src/: lib.rs
crates/blackrouter-providers/: Cargo.toml
crates/blackrouter-providers/src/: lib.rs
crates/blackrouter-rtk/: Cargo.toml
crates/blackrouter-rtk/src/: lib.rs
crates/blackrouter-storage/: Cargo.toml
crates/blackrouter-storage/src/: lib.rs
crates/blackrouter-telegram/: Cargo.toml
crates/blackrouter-telegram/src/: lib.rs
crates/blackrouter-translator/: Cargo.toml
crates/blackrouter-translator/src/: lib.rs  stream.rs
deploy/observability/: prometheus.yml
deploy/observability/grafana/dashboards/: blackrouter.json
deploy/observability/grafana/provisioning/dashboards/: dashboards.yml
deploy/windows-server/: README.md  register-blackrouter-task.ps1  start-blackrouter.ps1
docs/: DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS.md  OPERATIONS.md  PROVIDER_LOGIN_MECHANISMS.md  README.md  REQUEST_PROCESSING_PIPELINE.md  ROADMAP_NEXT.md  UI_UPGRADE_PLAN.md  ZED_INTEGRATION.md
tests/fixtures/api/: aliases.json  api-keys.json  combos.json  config-versions.json  health.json  models.json  provider-catalog.json  provider-limits.json  providers.json  runtime.json  setup-config.json
tests/ui/: control-panel.spec.js
