[workspace]
members = [
  "crates/blackrouter-api",
  "crates/blackrouter-bin",
  "crates/blackrouter-common",
  "crates/blackrouter-config",
  "crates/blackrouter-core",
  "crates/blackrouter-providers",
  "crates/blackrouter-rtk",
  "crates/blackrouter-storage",
  "crates/blackrouter-telegram",
  "crates/blackrouter-translator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/blackrouter/blackrouter"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
dotenvy = "0.15"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "limit", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
