[package]
name = "blackrouter-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blackrouter-common = { path = "../blackrouter-common" }
blackrouter-config = { path = "../blackrouter-config" }
blackrouter-core = { path = "../blackrouter-core" }
blackrouter-storage = { path = "../blackrouter-storage" }
axum.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
