[package]
name = "blackrouter-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blackrouter-common = { path = "../blackrouter-common" }
blackrouter-config = { path = "../blackrouter-config" }
blackrouter-core = { path = "../blackrouter-core" }
blackrouter-rtk = { path = "../blackrouter-rtk" }
blackrouter-storage = { path = "../blackrouter-storage" }
blackrouter-telegram = { path = "../blackrouter-telegram" }
blackrouter-translator = { path = "../blackrouter-translator" }
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
