[package]
name = "blackrouter-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blackrouter-common = { path = "../blackrouter-common" }
blackrouter-config = { path = "../blackrouter-config" }
blackrouter-core = { path = "../blackrouter-core" }
blackrouter-providers = { path = "../blackrouter-providers" }
blackrouter-rtk = { path = "../blackrouter-rtk" }
blackrouter-storage = { path = "../blackrouter-storage" }
blackrouter-telegram = { path = "../blackrouter-telegram" }
blackrouter-translator = { path = "../blackrouter-translator" }
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
prometheus.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
tiktoken-rs = "0.6"
