[package]
name = "blackrouter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "blackrouter-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blackrouter-config = { path = "../blackrouter-config" }
blackrouter-storage = { path = "../blackrouter-storage" }
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
open.workspace = true
