[package]
name = "blackrouter-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blackrouter-common = { path = "../blackrouter-common" }
blackrouter-core = { path = "../blackrouter-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
