[package]
name = "blackrouter-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blackrouter-common = { path = "../blackrouter-common" }
blackrouter-core = { path = "../blackrouter-core" }
blackrouter-storage = { path = "../blackrouter-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
